--- a/scss/sections/_procedures.scss
+++ b/scss/sections/_procedures.scss
@@ -3,7 +3,7 @@
 .procedures-section {
   padding: 20px 0;
   @media (min-width: utils.$bp-tablet) {
-    padding: 0 0 48px;
+    padding: 48px 0;
   }
 
   &__title {
